# Web-sheild-Hack-the-site

./: .env.example  Procfile  README.md  config.py  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  seed.py
app/: __init__.py
app/models/: __init__.py  scan.py  subscription.py  user.py
app/routes/: __init__.py  admin_routes.py  auth_routes.py  dashboard_routes.py  learning_routes.py  page_routes.py  report_routes.py  scan_routes.py  settings_routes.py  subscription_routes.py
app/scanner/: attack_surface.py  crawler.py
app/security/: __init__.py  decorators.py  rate_limit.py
app/services/: __init__.py  ad_service.py  auth_service.py  payment_service.py  report_service.py  scan_service.py
app/static/css/: main.css
app/static/js/: api.js  app.js  attack-surface-map.js  premium.js  scan-progress.js  settings.js
app/templates/: base.html
app/templates/learning/: lesson_details.html
app/templates/pages/: attack_surface_map.html  contact.html  dashboard.html  learning_center.html  new_scan.html  premium_upgrade.html  privacy_policy.html  settings.html
app/templates/partials/: ad_banner.html  navbar.html  sidebar.html
app/utils/: constants.py
src/: App.jsx  config.js
src/api/: paymentApi.js  subscriptionApi.js
src/components/: AdBanner.jsx  Header.jsx
src/pages/: AttackSurfaceMap.jsx  Dashboard.jsx  LearningCenter.jsx  PremiumUpgrade.jsx  ScanProgress.jsx  Settings.jsx
tests/: conftest.py  test_subscriptions.py
