[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webshield-scanner"
version = "1.0.0"
description = "Web Security Scanner and Learning Mobile Application"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "Proprietary - For Educational and Authorized Testing Only"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "Flask>=3.1.3",
    "Flask-SQLAlchemy>=3.1.0",
    "Flask-Migrate>=4.0.0",
    "Flask-CORS>=6.0.0",
    "Flask-Login>=0.6.0",
    "Flask-WTF>=1.1.0",
    "Flask-Bcrypt>=1.0.0",
    "Flask-JWT-Extended>=4.5.0",
    "Flask-Mail>=0.9.0",
    "Flask-Session>=0.5.0",
    "psycopg[binary]>=3.2.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.12.0",
    "requests>=2.33.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "chardet>=5.2.0,<6.0.0",
    "lxml>=6.1.0",
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "cryptography>=48.0.1",
    "bcrypt>=4.1.0",
    "passlib>=1.7.0",
    "WeasyPrint>=68.0",
    "reportlab>=4.0.0",
    "jinja2>=3.1.6",
    "markdown>=3.8.1",
    "python-dotenv>=1.2.2",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "stripe>=7.7.0",
    "Flask-Limiter>=3.5.0",
    "sentry-sdk>=1.38.0",
    "Pillow>=12.2.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "gunicorn>=21.2.0",
    "gevent>=23.9.0",
    "whitenoise>=6.6.0",
    "python-slugify>=8.0.0",
    "tldextract>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "black>=26.3.1",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pylint>=3.0.2",
]

[project.urls]
Homepage = "https://webshield-scanner.com"
Repository = "https://github.com/yourusername/webshield-scanner"
Issues = "https://github.com/yourusername/webshield-scanner/issues"
Documentation = "https://docs.webshield-scanner.com"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_third_party = ["flask", "sqlalchemy", "alembic", "pytest", "requests", "beautifulsoup4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
ignore_missing_imports = true
exclude = ["migrations/", "venv/", ".venv/", "mobile-wrapper/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -v --cov=backend --cov-report=term-missing --cov-report=html"
testpaths = [
    "backend/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "scanner: Scanner module tests",
    "slow: Tests that take longer to run",
    "security: Security-related tests",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/migrations/*", "*/venv/*", "*/instance/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.celery]
broker_url = "redis://localhost:6379/0"
result_backend = "redis://localhost:6379/0"
task_serializer = "json"
result_serializer = "json"
accept_content = ["json"]
timezone = "UTC"
enable_utc = true
task_track_started = true
task_time_limit = 600
task_soft_time_limit = 300
worker_prefetch_multiplier = 1
worker_max_tasks_per_child = 100
